--- a/front/src/css/styles.css
+++ b/front/src/css/styles.css
@@ -1,22 +1,10 @@
 /* TEMPLATE STYLES */
-
 html,
 body,
-.view-bg {
+.full-height {
   height: 100vh;
 }
 /* Navigation*/
-
-.navbar {
-  background-color: transparent;
-}
-
-.scrolling-navbar {
-  -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
-  -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
-  transition: background .5s ease-in-out, padding .5s ease-in-out;
-}
-
 .top-nav-collapse {
   background-color: #1C2331;
 }
