button get started link change

--- a/front/src/js/components/home/home-view.html
+++ b/front/src/js/components/home/home-view.html
@@ -8,7 +8,7 @@
       <div class="col-md-12 animated fadeInUp text-white text-center mt-3">
         <h2 class="h2-responsive font-bold">Mountain Shop</h2>
         <p>Quality gear for mountain lovers!</p>
-        <a target="_blank" href="https://mdbootstrap.com/material-design-for-bootstrap/" class="btn btn-default btn-lg" rel="nofollow">Get Started</a>
+        <a ui-sref="products" class="btn btn-default btn-lg">Get Started</a>
       </div>
     </div>
   </div>
