product view first design

--- a/front/src/js/components/home/home-view.html
+++ b/front/src/js/components/home/home-view.html
@@ -2,7 +2,7 @@
 <div class="view view-bg full-height hm-black-light">
   <div class="full-bg-img flex-center">
     <div class="row">
-      <div class="col-md-12 animated fadeInDown  flex-center mt-5">
+      <div class="col-md-12 animated bounceInDown  flex-center mt-5">
         <img src="src/img/brandpage.png" alt="bag" class="img-fluid" id="brandbag">
       </div>
       <div class="col-md-12 animated fadeInUp text-white text-center mt-3">
