--- a/front/src/js/components/products/products-view.html
+++ b/front/src/js/components/products/products-view.html
@@ -1,7 +1,164 @@
 <div class="full-height">
-  <div class="flex-center flex-column">
-    <p class="wow fadeInLeft" data-wow-delay="0.2s">TEST 1</p>
-    <p class="wow fadeInRight" data-wow-delay="0.4s">TEST 2</p>
+  <div class="container pt-5">
+    <!--Page heading-->
+    <div class="row mt-5">
+      <div class="col-md-12">
+        <h1 class="h1-responsive">Products
+          <small class="text-muted">everything you need </small>
+        </h1>
+      </div>
+    </div>
+    <!--First row-->
+    <div class="row mt-5 wow">
+      <!--First column-->
+      <div class="col-lg-4 wow fadeIn" data-wow-delay="0.2s">
+        <!--Card-->
+        <div class="card">
+          <!--Card image-->
+          <div class="view hm-zoom flex-center">
+            <img class="img-fluid" src="src/img/products/bags/bag.jpg" alt="Card image cap">
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Bag</h4>
+            <!--Text-->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+          </div>
+        </div>
+      </div>
+      <!--Second column-->
+      <div class="col-lg-4 wow fadeIn" data-wow-delay="0.4s">
+        <!--Card-->
+        <div class="card">
+          <!--Card image-->
+          <div class="view hm-zoom flex-center">
+            <img class="img-fluid" src="src/img/products/gloves/gants.jpg" alt="Card image cap">
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Winter gloves</h4>
+            <!--Text-->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+          </div>
+        </div>
+      </div>
+      <!--Third column-->
+      <div class="col-lg-4 wow fadeIn" data-wow-delay="0.6s">
+        <!--Card-->
+        <div class="card">
+          <!--Card image-->
+          <div class="view hm-zoom flex-center">
+            <img class="img-fluid" src="src/img/products/hats/bonnet-sherpa.jpg" alt="Card image cap">
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Sherpa Cap</h4>
+            <!--Text-->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Second row-->
+    <div class="row mt-3">
+      <!--First column-->
+      <div class="col-lg-4 wow fadeIn" data-wow-delay="0.2s">
+        <!--Card-->
+        <div class="card">
+          <!--Card image-->
+          <div class="view hm-zoom flex-center">
+            <img class="img-fluid" src="src/img/products/jackets/parka.jpg" alt="Card image cap">
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Parka</h4>
+            <!--Text-->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+          </div>
+        </div>
+      </div>
+      <!--Second column-->
+      <div class="col-lg-4 wow fadeIn" data-wow-delay="0.4s">
+        <!--Card-->
+        <div class="card">
+          <!--Card image-->
+          <div class="view hm-zoom flex-center">
+            <img class="img-fluid" src="src/img/products/bags/bag.jpg" alt="Card image cap">
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Bag</h4>
+            <!--Text-->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+          </div>
+        </div>
+      </div>
+      <!--Third column-->
+      <div class="col-lg-4">
+        <!--Card-->
+        <div class="card">
+          <!--Card image-->
+          <div class="view hm-zoom flex-center">
+            <img class="img-fluid" src="src/img/products/gloves/gants.jpg" alt="Card image cap">
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Gloves</h4>
+            <!--Text-->
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <!--Pagination-->
+    <nav class="row flex-center wow fadeIn" data-wow-delay="0.2s">
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <a class="page-link" href="#!" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        <li class="page-item active">
+          <a class="page-link" href="#!">1
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">4</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">5</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
 
