--- a/front/src/js/components/products/products-view.html
+++ b/front/src/js/components/products/products-view.html
@@ -3,165 +3,65 @@
     <!--Page heading-->
     <div class="row mt-5">
       <div class="col-md-12">
-        <h1 class="h1-responsive">Products
-          <small class="text-muted">everything you need </small>
+        <h1 class="h1-responsive">Produits
+          <small class="text-muted"> tout ce dont vous avez besoin </small>
         </h1>
       </div>
     </div>
     <hr>
     <!--First row-->
-    <div class="row wow">
+    <div class="row wow mb-auto">
       <!--First column-->
-      <div class="col-lg-4 wow fadeIn mt-3" data-wow-delay="0.2s">
-        <!--Card-->
-        <div class="card">
-          <!--Card image-->
-          <div class="view hm-zoom flex-center">
-            <img class="img-fluid" src="src/img/products/bags/bag.jpg" alt="Card image cap">
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Bag</h4>
-            <!--Text-->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-      <!--Second column-->
-      <div class="col-lg-4 wow fadeIn mt-3" data-wow-delay="0.4s">
-        <!--Card-->
-        <div class="card">
-          <!--Card image-->
-          <div class="view hm-zoom flex-center">
-            <img class="img-fluid" src="src/img/products/gloves/gants.jpg" alt="Card image cap">
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Winter gloves</h4>
-            <!--Text-->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-      <!--Third column-->
-      <div class="col-lg-4 wow fadeIn mt-3" data-wow-delay="0.6s">
-        <!--Card-->
-        <div class="card">
-          <!--Card image-->
-          <div class="view hm-zoom flex-center">
-            <img class="img-fluid" src="src/img/products/hats/bonnet-sherpa.jpg" alt="Card image cap">
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Sherpa Cap</h4>
-            <!--Text-->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <!--First column-->
-      <div class="col-lg-4 wow fadeIn mt-3" data-wow-delay="0.2s">
-        <!--Card-->
-        <div class="card">
-          <!--Card image-->
-          <div class="view hm-zoom flex-center">
-            <img class="img-fluid" src="src/img/products/jackets/parka.jpg" alt="Card image cap">
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Parka</h4>
-            <!--Text-->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-      <!--Second column-->
-      <div class="col-lg-4 wow fadeIn mt-3" data-wow-delay="0.4s">
-        <!--Card-->
-        <div class="card">
-          <!--Card image-->
-          <div class="view hm-zoom flex-center">
-            <img class="img-fluid" src="src/img/products/jackets/army-coat.jpg" alt="Card image cap">
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Bag</h4>
-            <!--Text-->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-      <!--Third column-->
-      <div class="col-lg-4 wow fadeIn mt-3" data-wow-delay="0.6s">
-        <!--Card-->
-        <div class="card">
-          <!--Card image-->
-          <div class="view hm-zoom flex-center">
-            <img class="img-fluid" src="src/img/products/jackets/lhc-winter-jacket.jpg" alt="Card image cap">
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Gloves</h4>
-            <!--Text-->
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <hr>
-
-    <!--Pagination-->
-    <nav class="row flex-center wow fadeIn" data-wow-delay="0.2s">
-      <ul class="pagination">
-        <li class="page-item disabled">
-          <a class="page-link" href="#!" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
+        <div ng-repeat="product in products" class="col-lg-3 col-md-4 col-sm-6 animated fadeIn mt-3">
+          <a href="#">
+          <div class="card card-preview">
+            <div class="view hm-zoom flex-center">
+              <img class="img-fluid" ng-src="src/img/products/{{product.type}}/{{product.image}}" alt="Card image cap">
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">{{product.brand}}</h4>
+              <p class="card-text">
+                {{product.name}}<br>
+                {{product.price + ' euros'}}</p>
+              </div>
+            </div>
           </a>
-        </li>
-        <li class="page-item active">
-          <a class="page-link" href="#!">1
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!">4</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!">5</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#!" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+        </div>
+      </div>
+      <hr>
+      
+      <!--Pagination-->
+      <nav class="row w-100 mt-auto flex-center wow fadeIn" data-wow-delay="0.2s">
+        <ul class="pagination">
+          <li class="page-item disabled">
+            <a class="page-link" href="#!" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a>
+          </li>
+          <li class="page-item active">
+            <a class="page-link" href="#!">1
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#!">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#!">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#!">4</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#!">5</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#!" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">Next</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
   </div>
-</div>
-
-<!-- Animations init-->
-<script>
-  new WOW().init();
-</script>
