card adjust, search filters and cart tooltip added

--- a/front/src/css/styles.css
+++ b/front/src/css/styles.css
@@ -39,6 +39,14 @@ footer.page-footer {
   background-size: cover;
 }
 
+#logo-brand {
+  height: 40px;
+}
+
+#brandbag {
+  height: 300px;
+}
+
 .card img {
   height: 300px;
 }
@@ -55,10 +63,50 @@ footer.page-footer {
   text-align: center;
 }
 
-#logo-brand {
-  height: 40px;
+.red-text-hover {
+  transition: all ease-in-out 0.3s;
 }
 
-#brandbag {
-  height: 300px;
+.red-text-hover:hover {
+  color: red;
+}
+
+.tooltip-trigger {
+  position: relative;
+}
+
+.tooltip-trigger::before, .tooltip-trigger::after {
+  position: absolute;
+  opacity: 0;
+  transition: all ease-in-out 0.3s;
+  visibility: hidden;
+}
+
+.tooltip-trigger:hover::before,
+.tooltip-trigger:hover::after {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+.tooltip-trigger::before {
+  content: 'Add to cart';
+  width: 90px;
+  height: 20px;
+  line-height: 20px;
+  background: #383e47;
+  color: #ccc;
+  border-radius: 3px;
+  bottom: 25px;
+  left: calc(50% - 45px);
+}
+
+.tooltip-trigger::after {
+  content: '';
+  width: 0;
+  height: 0;
+  border: 5px solid transparent;
+  border-top-color: #383e47;
+  left: calc(60% - 5px);
+  bottom: 15px;
 }
