--- a/front/src/js/components/products/products-view.html
+++ b/front/src/js/components/products/products-view.html
@@ -3,65 +3,84 @@
     <!--Page heading-->
     <div class="row mt-5">
       <div class="col-md-12">
-        <h1 class="h1-responsive">Produits
-          <small class="text-muted"> tout ce dont vous avez besoin </small>
+        <h1 class="h1-responsive">Products 
+          <small class="text-muted"> all you need</small>
         </h1>
       </div>
     </div>
     <hr>
+    <div class="row container d-flex align-items-center">
+      <div class="mx-3">
+        <label for="">Catégorie: </label>
+          <select ng-model="search.type">
+            <option value="">All</option>
+            <option value="jacket">Jackets and Coats</option>
+            <option value="hat">Hats and Caps</option>
+            <option value="gloves">Gloves</option>
+            <option value="bag">Bags</option>
+          </select>
+      </div>
+      <div class="mx-3">
+        <label for="">Marque: </label>
+        <input ng-model="search.brand">
+      </div>
+    </div>
     <!--First row-->
-    <div class="row wow mb-auto">
-      <!--First column-->
-        <div ng-repeat="product in products" class="col-lg-3 col-md-4 col-sm-6 animated fadeIn mt-3">
-          <a href="#">
+    <div class="row wow mt-3 mb-auto">
+      <div ng-repeat="product in products | filter:search" class="col-lg-3 col-md-4 col-sm-6 animated fadeIn mt-3">
+        <a href="#">
           <div class="card card-preview">
             <div class="view hm-zoom flex-center">
-              <img class="img-fluid" ng-src="src/img/products/{{product.type}}/{{product.image}}" alt="Card image cap">
+              <img class="img-fluid" ng-src="src/img/products/{{product.type}}/{{product.image}}.jpg" alt="Card image cap">
             </div>
             <div class="card-body">
               <h4 class="card-title">{{product.brand}}</h4>
-              <p class="card-text">
-                {{product.name}}<br>
-                {{product.price + ' euros'}}</p>
-              </div>
+              <p class="card-text">{{product.name}}</p>
             </div>
           </a>
-        </div>
+            <div class="card-footer">
+               {{product.price + '$'}}
+              <a class="tooltip-trigger">
+                <i class="fa fa-lg red-text-hover fa-shopping-cart"></i>
+              </a>
+            </div>
+          </div>
       </div>
-      <hr>
-      
-      <!--Pagination-->
-      <nav class="row w-100 mt-auto flex-center wow fadeIn" data-wow-delay="0.2s">
-        <ul class="pagination">
-          <li class="page-item disabled">
-            <a class="page-link" href="#!" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li class="page-item active">
-            <a class="page-link" href="#!">1
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#!">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#!">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#!">4</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#!">5</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#!" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+    </div>
+
+    <hr>
+    <!--Pagination-->
+    <nav class="row w-100 mt-auto flex-center wow fadeIn" data-wow-delay="0.2s">
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <a class="page-link" href="#!" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        <li class="page-item active">
+          <a class="page-link" href="#!">1
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">4</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!">5</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#!" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
