--- a/front/src/js/components/home/home-view.html
+++ b/front/src/js/components/home/home-view.html
@@ -2,7 +2,7 @@
 <div class="view view-bg full-height hm-black-light">
   <div class="full-bg-img flex-center">
     <div class="row">
-      <div class="col-md-12 animated bounceInDown  flex-center mt-5">
+      <div class="col-md-12 animated bounceInDown flex-center mt-5">
         <img src="src/img/brandpage.png" alt="bag" class="img-fluid" id="brandbag">
       </div>
       <div class="col-md-12 animated fadeInUp text-white text-center mt-3">
@@ -24,7 +24,7 @@
       <!--Card-->
       <div class="card wow fadeInUp" data-wow-delay="0.2s">
         <!--Card image-->
-        <div class="view hm-zoom flex-center">
+        <div class="view waves-effect waves-light hm-zoom flex-center">
           <img class="img-fluid" src="src/img/products/Jackets-Coats/parka.jpg" alt="Card image cap">
         </div>
         <!--Card content-->
@@ -33,7 +33,9 @@
           <h4 class="card-title text-center">Parka</h4>
           <!--Text-->
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-info">Browse more</a>
+        </div>
+        <div class="card-footer text-center">
+          <a ui-sref="products({category: 'Jackets-Coats'})" class="btn btn-info">Browse more</a>
         </div>
       </div>
     </div>
@@ -42,7 +44,7 @@
       <!--Card-->
       <div class="card wow fadeInUp" data-wow-delay="0.4s">
         <!--Card image-->
-        <div class="view hm-zoom flex-center">
+        <div class="view waves-effect waves-light hm-zoom flex-center">
           <img class="img-fluid" src="src/img/products/Hats-Caps/bonnet-sherpa.jpg" alt="Card image cap">
         </div>
         <!--Card content-->
@@ -51,7 +53,9 @@
           <h4 class="card-title text-center">Sherpa Cap</h4>
           <!--Text-->
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-info">Browse more</a>
+        </div>
+        <div class="card-footer text-center">
+          <a ui-sref="products({category: 'Hats-Caps'})" class="btn btn-info">Browse more</a>
         </div>
       </div>
     </div>
@@ -60,7 +64,7 @@
       <!--Card-->
       <div class="card wow fadeInUp" data-wow-delay="0.6s">
         <!--Card image-->
-        <div class="view hm-zoom flex-center">
+        <div class="view waves-effect waves-light hm-zoom flex-center">
           <img class="img-fluid" src="src/img/products/Gloves/gants.jpg" alt="Card image cap">
         </div>
         <!--Card content-->
@@ -69,7 +73,9 @@
           <h4 class="card-title text-center">Winter gloves</h4>
           <!--Text-->
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-info">Browse more</a>
+        </div>
+        <div class="card-footer text-center">
+          <a ui-sref="products({category: 'Gloves'})" class="btn btn-info">Browse more</a>
         </div>
       </div>
     </div>
@@ -78,7 +84,7 @@
       <!--Card-->
       <div class="card wow fadeInUp" data-wow-delay="0.8s">
         <!--Card image-->
-        <div class="view hm-zoom flex-center">
+        <div class="view waves-effect waves-light hm-zoom flex-center">
           <img class="img-fluid" src="src/img/products/Bags/bag.jpg" alt="Card image cap">
         </div>
         <!--Card content-->
@@ -87,7 +93,9 @@
           <h4 class="card-title text-center">Bags</h4>
           <!--Text-->
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-info">Browse more</a>
+        </div>
+        <div class="card-footer text-center">
+          <a ui-sref="products({category: 'Bags'})" class="btn btn-info">Browse more</a>
         </div>
       </div>
     </div>
