sweetalert and modal fixes

--- a/front/src/js/components/product-details/product-details-view.html
+++ b/front/src/js/components/product-details/product-details-view.html
@@ -13,7 +13,7 @@
         <p class="pt-5">{{product.message}}</p>
         <hr>
         <button class="btn btn-success">Add to cart</button>
-        <button class="btn btn-primary">Go back Shopping</button>
+        <button class="btn btn-primary" ng-click="goBack()">Go back Shopping</button>
       </div>
     </div>
   </div>
