--- a/front/src/js/components/products/products-view.html
+++ b/front/src/js/components/products/products-view.html
@@ -34,7 +34,7 @@
               <option value="+price">Asc</option>
             </select>
           </div>
-          <div class="col-sm-6 col-lg-4">
+          <div class="col-sm-6 col-lg-4 p-2">
             <button class="btn btn-sm btn-dark" ng-click="resetSearch()">Reset</button>
           </div>
         </div>
