--- a/front/src/js/components/home/home-view.html
+++ b/front/src/js/components/home/home-view.html
@@ -32,10 +32,10 @@
           <!--Title-->
           <h4 class="card-title text-center">Parka</h4>
           <!--Text-->
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Essential, get the best jacket or coat to fight the cold, we already have a selection right for your needs.</p>
         </div>
         <div class="card-footer text-center">
-          <a ui-sref="products({category: 'Jackets-Coats'})" class="btn btn-info">Browse more</a>
+          <a ui-sref="products({category: 'Jackets-Coats'})" class="btn btn-default">More Jackets</a>
         </div>
       </div>
     </div>
@@ -52,10 +52,10 @@
           <!--Title-->
           <h4 class="card-title text-center">Sherpa Cap</h4>
           <!--Text-->
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">You may know that body's heat is maintained by your head at a 40% ratio, you better get quality hat and caps to keep you warm !</p>
         </div>
         <div class="card-footer text-center">
-          <a ui-sref="products({category: 'Hats-Caps'})" class="btn btn-info">Browse more</a>
+          <a ui-sref="products({category: 'Hats-Caps'})" class="btn btn-default">More Hats and Caps</a>
         </div>
       </div>
     </div>
@@ -72,10 +72,10 @@
           <!--Title-->
           <h4 class="card-title text-center">Winter gloves</h4>
           <!--Text-->
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">It is hard to maintain fingers warm and comfy but also keep movement freedom, choose the right gloves for the right job.</p>
         </div>
         <div class="card-footer text-center">
-          <a ui-sref="products({category: 'Gloves'})" class="btn btn-info">Browse more</a>
+          <a ui-sref="products({category: 'Gloves'})" class="btn btn-default">More Gloves</a>
         </div>
       </div>
     </div>
@@ -92,10 +92,10 @@
           <!--Title-->
           <h4 class="card-title text-center">Bags</h4>
           <!--Text-->
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Water, food, tools, anything can be stored in these. Sizes, utility.. we got your back !</p>
         </div>
         <div class="card-footer text-center">
-          <a ui-sref="products({category: 'Bags'})" class="btn btn-info">Browse more</a>
+          <a ui-sref="products({category: 'Bags'})" class="btn btn-default">More Bags</a>
         </div>
       </div>
     </div>
