--- a/front/src/js/components/cart/cart-view.html
+++ b/front/src/js/components/cart/cart-view.html
@@ -3,8 +3,8 @@
     <div class="row pt-5 white-text stylish-color">
       <div class="container">
         <div class="d-flex justify-content-start align-items-center pb-4">
-          <i class="fa fa-2x fa-shopping-cart mr-3" aria-hidden="true"></i>
-          <h2 class="h2-responsive"> Shopping Cart</h2>
+          <h2 class="h2-responsive">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Shopping Cart</h2>
         </div>
       </div>
     </div>
@@ -12,23 +12,43 @@
       <div class="row">
         <div class="col-md-8">
           <ul class="list-group">
-            <li ng-repeat="cart in carts" class="list-group-item row d-flex justify-content-start p-1">
-              <div class="col-5 col-sm-3 cart-display">
+            <li ng-repeat="cart in carts" class="list-group-item d-flex flex-row justify-content-start align-items-center p-1">
+              <div class="cart-display">
                 <img class="img-fluid" ng-src="src/img/products/{{cart.type}}/{{cart.image}}.jpg" alt="product image">
               </div>
-              <div class="col-7 col-sm-5">
-                <p>{{cart.brand}}<br>{{cart.name}}</p>
-              </div>
-              <div class="col-sm-4">
-                <p>{{'$' + cart.price}}</p>
+              <div class="row container-fluid">
+                <div class="col-12 col-md-4">
+                  <p>{{cart.brand}}
+                  <br>{{cart.name}}</p>
+                </div>
+                <div class="col-md-4">
+                  <p>Color: {{cart.color}}
+                  <br>Size: {{cart.size}}</p>
+                </div>
+                <div class="col-md-2">
+                  <p>{{'$' + cart.price}}</p>
+                </div>
+                <div class="col-12 d-flex justify-content-end">
+                  <a ng-click="test()">
+                    <i class="fa fa-plus" aria-hidden="true"></i>
+                  </a>
+                  <p class="mx-2">1</p>
+                  <a ng-click="test()">
+                    <i class="fa fa-minus" aria-hidden="true"></i>
+                  </a>
+                  <a ng-click="test()" class="red-text ml-4">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mt-2">
           <h4 class="h4-responsive">Total:</h4>
           <h2 class="h2-responsive">$50</h2>
           <button class="btn btn-danger">Checkout</button>
+          <button class="btn btn-default" ng-click="goBack()">Go Back Shopping</button>
         </div>
       </div>
     </div>
