--- a/front/src/js/components/cart/cart-view.html
+++ b/front/src/js/components/cart/cart-view.html
@@ -46,9 +46,10 @@
         </div>
         <div class="col-md-4 mt-2">
           <h4 class="h4-responsive">Total:</h4>
-          <h2 class="h2-responsive">$50</h2>
+          <h2 class="h2-responsive">{{cartTotal}}</h2>
           <button class="btn btn-danger">Checkout</button>
           <button class="btn btn-default" ng-click="goBack()">Go Back Shopping</button>
+          <button class="btn btn-warning" ng-click="resetCart()">Reset Cart</button>
         </div>
       </div>
     </div>
