--- a/front/src/js/components/product-details/product-details-view.html
+++ b/front/src/js/components/product-details/product-details-view.html
@@ -23,7 +23,7 @@
         <h3 class="h3-responsive">{{'$' + product.price}}</h3>
         <p class="pt-5">{{product.message}}</p>
         <hr>
-        <button class="btn btn-success" ng-click="addToCart(product.ref)">Add to cart</button>
+        <button class="btn btn-success" ng-click="addToCart()">Add to cart</button>
         <button class="btn btn-default" ng-click="goBack()">Go Back Shopping</button>
       </div>
     </div>
