add to cart function on product view and product list view, clean-ups

--- a/front/src/js/components/products/products-view.html
+++ b/front/src/js/components/products/products-view.html
@@ -55,7 +55,7 @@
           </a>
           <div class="card-footer">
             {{'$' + product.price}}
-            <a class="tooltip-trigger">
+            <a class="tooltip-trigger" ng-click="addToCart(product)">
               <i class="fa fa-lg red-text-hover fa-shopping-cart"></i>
             </a>
           </div>
