--- a/front/src/js/components/product-details/product-details-view.html
+++ b/front/src/js/components/product-details/product-details-view.html
@@ -1,4 +1,4 @@
-<div class="full-height">
+<div class="full-height pb-5">
   <div class="container-fluid pt-5">
     <div class="row pt-5 white-text stylish-color">
       <div class="container">
@@ -8,7 +8,7 @@
         </div>
       </div>
     </div>
-    <div class="row animated fadeIn pt-5">
+    <div class="row animated fadeIn">
       <div class="col-md-6 pt-5">
         <div class="view waves-effect waves-light hm-zoom flex-center">
           <img class="img-fluid" ng-src="src/img/products/{{product.type}}/{{product.image}}.jpg" alt="Card image cap">
