delete function, fixes

--- a/front/src/js/components/cart/cart-view.html
+++ b/front/src/js/components/cart/cart-view.html
@@ -36,7 +36,7 @@
                   <a ng-click="test()">
                     <i class="fa fa-minus" aria-hidden="true"></i>
                   </a>
-                  <a ng-click="test()" class="red-text ml-4">
+                  <a ng-click="delFromCart(cart)" class="red-text ml-4">
                     <i class="fa fa-times" aria-hidden="true"></i>
                   </a>
                 </div>
